finish verify columns

--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<canvas class="board"></canvas>
+    <div>
+        <canvas class="board"></canvas>
+        <div class="message">
+            <span class="win">Ganhou</span>
+            <span class="tie">Empate</span>
+            <button type="button">Jogar novamente</button>
+        </div>
+    </div>
 	<script type="text/javascript" src="functions.js"></script>
 </body>
 </html>
