--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>TIC TAC TOE</title>
-	<link rel="stylesheet" type="text/css" href="/assets/stylesheets/style.css">
+	<link rel="stylesheet" type="text/css" href="./assets/stylesheets/style.css">
 </head>
 <body>
     <div>
@@ -14,6 +14,6 @@
             <button type="button">Jogar novamente</button>
         </div>
     </div>
-	<script type="text/javascript" src="/assets/javascripts/app.js"></script>
+	<script type="text/javascript" src="./assets/javascripts/app.js"></script>
 </body>
 </html>
